change db password to more realistic

--- a/compose.yml
+++ b/compose.yml
@@ -2,10 +2,10 @@ services:
   postgres:
     image: postgres:15-alpine
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=postgres
-    restart: unless-stopped
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 'P!@#$$%^&*()'
+      POSTGRES_DB: postgres
+    restart: always
     ports:
       - 5432:5432
     networks:
