--- a/dbdsn/2_propose/.env
+++ b/dbdsn/2_propose/.env
@@ -1,1 +1,1 @@
-DB_DSN=postgres://127.0.0.1:5432?user=postgres&password=password&dbname=postgres&sslmode=disable
+DB_DSN=postgres://127.0.0.1:5432?user=postgres&password=P%21%40%23%24%25%5E%26%2A%28%29&dbname=postgres&sslmode=disable
